--- a/studentLib/src/main/resources/application.properties
+++ b/studentLib/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.data.mongodb.database=Library
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
 # suppress inspection "UnusedProperty" for whole life
 spring.main.web-application-type=none
-# suppress inspection "UnusedProperty" for whole life thank
+# suppress inspection "UnusedProperty" for whole life thank added by mouli
 server.port=9999
 
 
